<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="member_join">회원가입</string>
    <string name="member_login">로그인</string>
    <string name="talk_shouting">Shouting</string>
    <string name="talk_write">수다 쓰기</string>
    <string name="plaza_go">광장으로</string>
    <string name="graph_view">그래프로 보기</string>
    
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    
    <string name="msg_info_lack">정보가 부족합니다.</string>

</resources>
